# deep_learning_challenge

./: .gitignore  README.md  classify_image.py  constants.py  create_embeddings.py  dataset.py  explore.ipynb  model.py  pyproject.toml  train_test.ipynb
